Closed Bug 865976 Opened 12 years ago Closed 12 years ago

Cannot build SeaMonkey on Linux since Bug 842927 (Implement DOM3 KeyboardEvent.key only for non-printable key, first) [nsGtkKeyUtils.o] Error 1

Categories

(SeaMonkey :: Build Config, defect)

x86
Linux
defect
Not set
major

Tracking

(Not tracked)

RESOLVED FIXED
seamonkey2.21

People

(Reporter: philip.chee, Assigned: masayuki)

References

Details

Attachments

(2 files)

Looks like we need to install a newer version of GTK+ http://tbpl-dev.callek.net/php/getParsedLog.php?id=20768925&tree=SeaMonkey#error0 ../../../../mozilla/widget/gtk2/../shared/NativeKeyToDOMKeyName.h:342:6: error: ‘GDK_Mail’ was not declared in this scope In file included from ../../../../mozilla/widget/gtk2/nsGtkKeyUtils.cpp:828:0: ../../../../mozilla/widget/gtk2/../shared/NativeKeyToDOMKeyName.h:490:6: error: ‘GDK_MonBrightnessDown’ was not declared in this scope ../../../../mozilla/widget/gtk2/../shared/NativeKeyToDOMKeyName.h:494:6: error: ‘GDK_MonBrightnessUp’ was not declared in this scope ../../../../mozilla/widget/gtk2/../shared/NativeKeyToDOMKeyName.h:502:6: error: ‘GDK_Eject’ was not declared in this scope ../../../../mozilla/widget/gtk2/../shared/NativeKeyToDOMKeyName.h:507:6: error: ‘GDK_PowerOff’ was not declared in this scope ../../../../mozilla/widget/gtk2/../shared/NativeKeyToDOMKeyName.h:527:6: error: ‘GDK_HomePage’ was not declared in this scope ../../../../mozilla/widget/gtk2/../shared/NativeKeyToDOMKeyName.h:532:6: error: ‘GDK_Refresh’ was not declared in this scope ../../../../mozilla/widget/gtk2/../shared/NativeKeyToDOMKeyName.h:533:6: error: ‘GDK_Reload’ was not declared in this scope ../../../../mozilla/widget/gtk2/../shared/NativeKeyToDOMKeyName.h:539:6: error: ‘GDK_Search’ was not declared in this scope ../../../../mozilla/widget/gtk2/../shared/NativeKeyToDOMKeyName.h:545:6: error: ‘GDK_Stop’ was not declared in this scope ../../../../mozilla/widget/gtk2/../shared/NativeKeyToDOMKeyName.h:550:6: error: ‘GDK_Back’ was not declared in this scope ../../../../mozilla/widget/gtk2/../shared/NativeKeyToDOMKeyName.h:556:6: error: ‘GDK_Forward’ was not declared in this scope ../../../../mozilla/widget/gtk2/../shared/NativeKeyToDOMKeyName.h:660:6: error: ‘GDK_Copy’ was not declared in this scope ../../../../mozilla/widget/gtk2/../shared/NativeKeyToDOMKeyName.h:664:6: error: ‘GDK_Cut’ was not declared in this scope ../../../../mozilla/widget/gtk2/../shared/NativeKeyToDOMKeyName.h:687:6: error: ‘GDK_Paste’ was not declared in this scope In file included from ../../../../mozilla/widget/gtk2/nsGtkKeyUtils.cpp:828:0: ../../../../mozilla/widget/gtk2/../shared/NativeKeyToDOMKeyName.h:959:6: error: ‘GDK_AudioMute’ was not declared in this scope ../../../../mozilla/widget/gtk2/../shared/NativeKeyToDOMKeyName.h:966:6: error: ‘GDK_AudioLowerVolume’ was not declared in this scope ../../../../mozilla/widget/gtk2/../shared/NativeKeyToDOMKeyName.h:973:6: error: ‘GDK_AudioRaiseVolume’ was not declared in this scope ../../../../mozilla/widget/gtk2/../shared/NativeKeyToDOMKeyName.h:978:6: error: ‘GDK_AudioPause’ was not declared in this scope ../../../../mozilla/widget/gtk2/../shared/NativeKeyToDOMKeyName.h:983:6: error: ‘GDK_AudioPlay’ was not declared in this scope ../../../../mozilla/widget/gtk2/../shared/NativeKeyToDOMKeyName.h:989:6: error: ‘GDK_AudioStop’ was not declared in this scope ../../../../mozilla/widget/gtk2/../shared/NativeKeyToDOMKeyName.h:995:6: error: ‘GDK_AudioNext’ was not declared in this scope ../../../../mozilla/widget/gtk2/../shared/NativeKeyToDOMKeyName.h:1001:6: error: ‘GDK_AudioPrev’ was not declared in this scope In file included from ../../../../mozilla/widget/gtk2/nsGtkKeyUtils.cpp:828:0: ../../../../mozilla/widget/gtk2/../shared/NativeKeyToDOMKeyName.h:1020:6: error: ‘GDK_Blue’ was not declared in this scope In file included from ../../../../mozilla/widget/gtk2/nsGtkKeyUtils.cpp:828:0: ../../../../mozilla/widget/gtk2/../shared/NativeKeyToDOMKeyName.h:1040:6: error: ‘GDK_BrightnessAdjust’ was not declared in this scope ../../../../mozilla/widget/gtk2/../shared/NativeKeyToDOMKeyName.h:1050:6: error: ‘GDK_Green’ was not declared in this scope In file included from ../../../../mozilla/widget/gtk2/nsGtkKeyUtils.cpp:828:0: ../../../../mozilla/widget/gtk2/../shared/NativeKeyToDOMKeyName.h:1094:6: error: ‘GDK_AudioRandomPlay’ was not declared in this scope In file included from ../../../../mozilla/widget/gtk2/nsGtkKeyUtils.cpp:828:0: ../../../../mozilla/widget/gtk2/../shared/NativeKeyToDOMKeyName.h:1106:6: error: ‘GDK_AudioRecord’ was not declared in this scope ../../../../mozilla/widget/gtk2/../shared/NativeKeyToDOMKeyName.h:1113:6: error: ‘GDK_Red’ was not declared in this scope ../../../../mozilla/widget/gtk2/../shared/NativeKeyToDOMKeyName.h:1117:6: error: ‘GDK_AudioRewind’ was not declared in this scope In file included from ../../../../mozilla/widget/gtk2/nsGtkKeyUtils.cpp:828:0: ../../../../mozilla/widget/gtk2/../shared/NativeKeyToDOMKeyName.h:1141:6: error: ‘GDK_Subtitle’ was not declared in this scope In file included from ../../../../mozilla/widget/gtk2/nsGtkKeyUtils.cpp:828:0: ../../../../mozilla/widget/gtk2/../shared/NativeKeyToDOMKeyName.h:1156:6: error: ‘GDK_Yellow’ was not declared in this scope make[6]: *** [nsGtkKeyUtils.o] Error 1
Severity: normal → major
So trying to update gtk2-devel locally on a cent5 system that is our current builders: Error: Missing Dependency: libgio-2.0.so.0 is needed by package gtk2-devel Error: Missing Dependency: libgio-2.0.so.0 is needed by package gtk2 Moco Version Found Ver for SM gtk2-devel 2.18.9-6 2.18.9-45.1 gtk2 2.18.9-6 2.18.9-45.1 glib2 2.22.5-6 --??-- ftp://ftp.pbone.net/mirror/ftp5.gwdg.de/pub/opensuse/repositories/home%3A/IBBoard%3A/server/CentOS_CentOS-5/i386/gtk2-devel-2.18.9-45.1.i386.rpm ftp://ftp.pbone.net/mirror/ftp5.gwdg.de/pub/opensuse/repositories/home%3A/IBBoard%3A/server/CentOS_CentOS-5/i386/gtk2-2.18.9-45.1.i386.rpm ... I can't find anything providing libgio-2.0.so.0 sanely for cent5...
Hmmm, looks like you need at least glib2-2.22 What does: yum whatprovides libgio-2.0.so.0 give you?
(In reply to Ian Neal from comment #3) > Hmmm, looks like you need at least glib2-2.22 > What does: > yum whatprovides libgio-2.0.so.0 > give you? Nothing :( I would have to either build myself or download an rpm from somewhere.. I should note jcranmer suggested ftp://ftp.pbone.net/mirror/ftp5.gwdg.de/pub/opensuse/repositories/home%3A/IBBoard%3A/server/CentOS_CentOS-5/i386/glib2-2.26.0-9.3.i386.rpm if its needed.
So, since upgrading gtk is so painful here, it looks like just adding the defines to the gtk2 header on the system will unbreak us and buy us some time from needing to upgrade. Asking for official review incase there is some detail I'm missing that makes this a bad idea, this did turn the build green [1]. and is *currently* applied on sea-vm-linux32-1 http://tbpl-dev.callek.net/?rev=1a94aa1b1afc This change would affect all trains at once.
Assignee: nobody → bugspam.Callek
Status: NEW → ASSIGNED
Attachment #742776 - Flags: review?(neil)
Comment on attachment 742776 [details] [diff] [review] monkeypatch system header I don't see how "extra" #defines could be a problem.
Attachment #742776 - Flags: review?(neil) → review+
Deployed to all linux32 systems, still todo the linux64, but should be simple
Sorry for the delay to replay and the bustage. Do you try changing the included file directly? We can fix this bug with updating http://mxr.mozilla.org/mozilla-central/source/widget/gtk2/compat/gdk/gdkkeysyms.h Should I make the patch?
(In reply to Masayuki Nakano (:masayuki) (Mozilla Japan) (almost offline 5/1-5/6) from comment #8) > Sorry for the delay to replay and the bustage. > > Do you try changing the included file directly? We can fix this bug with > updating > http://mxr.mozilla.org/mozilla-central/source/widget/gtk2/compat/gdk/ > gdkkeysyms.h > > Should I make the patch? We fixed it on the seamonkey side by updating the system header file manually. updating the compat copy is probably best regardless of what seamonkey did
> We can fix this bug with updating > http://mxr.mozilla.org/mozilla-central/source/widget/gtk2/compat/gdk/gdkkeysyms.h > Should I make the patch? Yes Please. onegaishimasu.
Assignee: bugspam.Callek → masayuki
Attached patch PatchSplinter Review
Attachment #750236 - Flags: review?(karlt)
Attachment #750236 - Flags: review?(karlt) → review+
Status: ASSIGNED → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → seamonkey2.21
For posterity, since the landed fix never reached Gecko 23, I had to do the hack to gtkkeysyms.h to linux64 for our beta builds anyway...
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: