Bug 865976 Fix bustage of SeaMonkey on official build environment r=karlt